samples/_failures_safe/1761359016_72b930_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_84b5dcfa.c: In function ‘main’:
./samples/SAFE/__tmp_84b5dcfa.c:151:5: error: expected expression at end of input
  151 |     operation =
      |     ^~~~~~~~~
./samples/SAFE/__tmp_84b5dcfa.c:151:5: error: expected declaration or statement at end of input
